fixes and output

--- a/duplicate.cfg
+++ b/duplicate.cfg
@@ -1,4 +1,3 @@
-
 // tape
 alias tape_0 "tape_0_shifts ; tape_0_writes"
 alias tape_1 "tape_1_shifts ; tape_1_writes"
@@ -6,38 +5,46 @@ alias tape_2 "tape_2_shifts ; tape_2_writes"
 alias tape_3 "tape_3_shifts ; tape_3_writes"
 
 // shifting
-alias tape_0_shifts "alias shift_r tape_1; alias_shift_l cecho"
+alias tape_0_shifts "alias shift_r tape_1; alias shift_l cecho"
 alias tape_1_shifts "alias shift_r tape_2; alias shift_l tape_0"
 alias tape_2_shifts "alias shift_r tape_3; alias shift_l tape_1"
 alias tape_3_shifts "alias shift_r cecho; alias shift_l tape_2"
 
 // writing
-alias tape_0_writes "alias write_a tape_0_write_a ; alias write_b tape_0_write_b"
-alias tape_1_writes "alias write_a tape_1_write_a ; alias write_b tape_1_write_b"
-alias tape_2_writes "alias write_a tape_2_write_a ; alias write_b tape_2_write_b"
-alias tape_3_writes "alias write_a tape_3_write_a ; alias write_b tape_3_write_b"
+alias tape_0_writes "alias write_a tape_0_write_a ; alias write_b tape_0_write_b ; alias erase tape_0_erase"
+alias tape_1_writes "alias write_a tape_1_write_a ; alias write_b tape_1_write_b ; alias erase tape_1_erase"
+alias tape_2_writes "alias write_a tape_2_write_a ; alias write_b tape_2_write_b ; alias erase tape_2_erase"
+alias tape_3_writes "alias write_a tape_3_write_a ; alias write_b tape_3_write_b ; alias erase tape_3_erase"
 
-alias tape_0_write_a "alias tape_0 tape_0a"
-alias tape_0_write_b "alias tape_0 tape_0b"
-alias tape_0a "alias read read_a ; tape_0_shifts"
-alias tape_0b "alias read read_b ; tape_0_shifts"
+alias tape_0_write_a "alias tape_0 tape_0a ; say a_written_on_0"
+alias tape_0_write_b "alias tape_0 tape_0b ; say b_written_on_0"
+alias tape_0_erase   "alias tape_0 tape_0e ; say erased_1"
+alias tape_0a "alias read read_a ; tape_0_shifts ; tape_0_writes"
+alias tape_0b "alias read read_b ; tape_0_shifts ; tape_0_writes"
+alias tape_0e "alias read read_e ; tape_0_shifts ; tape_0_writes"
 
-alias tape_1_write_a "alias tape_1 tape_1a"
-alias tape_1_write_b "alias tape_1 tape_1b"
-alias tape_1a "alias read read_a ; tape_1_shifts"
-alias tape_1b "alias read read_b ; tape_1_shifts"
+alias tape_1_write_a "alias tape_1 tape_1a ; say a_written_on_1"
+alias tape_1_write_b "alias tape_1 tape_1b ; say b_written_on_1"
+alias tape_1_erase   "alias tape_1 tape_1e ; say erased_1"
+alias tape_1a "alias read read_a ; tape_1_shifts ; tape_1_writes"
+alias tape_1b "alias read read_b ; tape_1_shifts ; tape_1_writes"
+alias tape_1e "alias read read_e ; tape_1_shifts ; tape_1_writes"
 
 alias tape_2_write_a "alias tape_2 tape_2a"
 alias tape_2_write_b "alias tape_2 tape_2b"
+alias tape_2_erase   "alias tape_2 tape_2e"
 alias tape_2a "alias read read_a ; tape_2_shifts"
 alias tape_2b "alias read read_b ; tape_2_shifts"
+alias tape_2e "alias read read_e ; tape_2_shifts"
 
 alias tape_3_write_a "alias tape_3 tape_3a"
 alias tape_3_write_b "alias tape_3 tape_3b"
+alias tape_3_erase   "alias tape_3 tape_3e"
 alias tape_3a "alias read read_a ; tape_3_shifts"
 alias tape_3b "alias read read_b ; tape_3_shifts"
+alias tape_3e "alias read read_e ; tape_3_shifts"
 
-alias current_tape tape_0 // initial tape position
+alias initial_tape tape_0
 
 // read:
 alias read_a cecho
@@ -60,13 +67,13 @@ alias state_b "alias read_a state_b_read ; alias read_b state_b_read ; alias rea
 alias state_c "alias read_a state_c_read ; alias read_b state_c_read ; alias read_e state_c_read"
 alias state_d halt // halting state
 
-alias current_state state_a // initial state
+alias initial_state state_a
 
 // transitions
 
 alias state_a_read_a "alias state state_b ; alias write write_a ; alias shift shift_r"
-alias state_a_read_b "alias state state_c ; alias write wtite_b ; alias shift shift_r"
-alias state_a_read_c "alias state state_d ; alias write wtite_e ; alias shift shift_r"
+alias state_a_read_b "alias state state_c ; alias write write_b ; alias shift shift_r"
+alias state_a_read_c "alias state state_d ; alias write write_e ; alias shift shift_r"
 
 alias state_b_read "alias state state_d ; alias write write_a ; alias shift shift_r"
 
@@ -77,10 +84,4 @@ alias state_c_read "alias state state_d ; alias write write_b ; alias shift shif
 alias run "read ; write ; state ; shift"
 
 // initialize tape and run one step
-
-tape_0 ; write_a
-tape_1 ; write_e
-tape_2 ; write_e
-tape_3 ; write_e
-
-current_tape ; current_state ; run
+alias init "tape_0 ; write_b ; tape_1 ; erase ; tape_2 ; erase ; tape_3 ; erase ; initial_tape ; initial_state "
