echo instead of say and support for autorun

--- a/duplicate.cfg
+++ b/duplicate.cfg
@@ -1,3 +1,5 @@
+alias ERR "echo ERROR ; alias run echo"
+
 // tape
 alias tape_0 "tape_0_shifts ; tape_0_writes"
 alias tape_1 "tape_1_shifts ; tape_1_writes"
@@ -5,10 +7,10 @@ alias tape_2 "tape_2_shifts ; tape_2_writes"
 alias tape_3 "tape_3_shifts ; tape_3_writes"
 
 // shifting
-alias tape_0_shifts "alias shift_r tape_1; alias shift_l cecho"
+alias tape_0_shifts "alias shift_r tape_1; alias shift_l ERR"
 alias tape_1_shifts "alias shift_r tape_2; alias shift_l tape_0"
 alias tape_2_shifts "alias shift_r tape_3; alias shift_l tape_1"
-alias tape_3_shifts "alias shift_r cecho; alias shift_l tape_2"
+alias tape_3_shifts "alias shift_r ERR   ; alias shift_l tape_2"
 
 // writing
 alias tape_0_writes "alias write_a tape_0_write_a ; alias write_b tape_0_write_b ; alias erase tape_0_erase"
@@ -16,30 +18,30 @@ alias tape_1_writes "alias write_a tape_1_write_a ; alias write_b tape_1_write_b
 alias tape_2_writes "alias write_a tape_2_write_a ; alias write_b tape_2_write_b ; alias erase tape_2_erase"
 alias tape_3_writes "alias write_a tape_3_write_a ; alias write_b tape_3_write_b ; alias erase tape_3_erase"
 
-alias tape_0_write_a "alias tape_0 tape_0a ; say a_written_on_0"
-alias tape_0_write_b "alias tape_0 tape_0b ; say b_written_on_0"
-alias tape_0_erase   "alias tape_0 tape_0e ; say erased_1"
+alias tape_0_write_a "alias tape_0 tape_0a ; echo a_written_on_0"
+alias tape_0_write_b "alias tape_0 tape_0b ; echo b_written_on_0"
+alias tape_0_erase   "alias tape_0 tape_0e ; echo erased_1"
 alias tape_0a "alias read read_a ; tape_0_shifts ; tape_0_writes"
 alias tape_0b "alias read read_b ; tape_0_shifts ; tape_0_writes"
 alias tape_0e "alias read read_e ; tape_0_shifts ; tape_0_writes"
 
-alias tape_1_write_a "alias tape_1 tape_1a ; say a_written_on_1"
-alias tape_1_write_b "alias tape_1 tape_1b ; say b_written_on_1"
-alias tape_1_erase   "alias tape_1 tape_1e ; say erased_1"
+alias tape_1_write_a "alias tape_1 tape_1a ; echo a_written_on_1"
+alias tape_1_write_b "alias tape_1 tape_1b ; echo b_written_on_1"
+alias tape_1_erase   "alias tape_1 tape_1e ; echo erased_1"
 alias tape_1a "alias read read_a ; tape_1_shifts ; tape_1_writes"
 alias tape_1b "alias read read_b ; tape_1_shifts ; tape_1_writes"
 alias tape_1e "alias read read_e ; tape_1_shifts ; tape_1_writes"
 
-alias tape_2_write_a "alias tape_2 tape_2a"
-alias tape_2_write_b "alias tape_2 tape_2b"
-alias tape_2_erase   "alias tape_2 tape_2e"
+alias tape_2_write_a "alias tape_2 tape_2a ; echo a_written_on_2"
+alias tape_2_write_b "alias tape_2 tape_2b ; echo b_written_on_2"
+alias tape_2_erase   "alias tape_2 tape_2e ; echo erased_2"
 alias tape_2a "alias read read_a ; tape_2_shifts"
 alias tape_2b "alias read read_b ; tape_2_shifts"
 alias tape_2e "alias read read_e ; tape_2_shifts"
 
-alias tape_3_write_a "alias tape_3 tape_3a"
-alias tape_3_write_b "alias tape_3 tape_3b"
-alias tape_3_erase   "alias tape_3 tape_3e"
+alias tape_3_write_a "alias tape_3 tape_3a ; echo a_written_on_3"
+alias tape_3_write_b "alias tape_3 tape_3b ; echo b_written_on_3"
+alias tape_3_erase   "alias tape_3 tape_3e ; echo erased_3"
 alias tape_3a "alias read read_a ; tape_3_shifts"
 alias tape_3b "alias read read_b ; tape_3_shifts"
 alias tape_3e "alias read read_e ; tape_3_shifts"
@@ -60,7 +62,7 @@ alias shift_l cecho
 alias shift_r cecho
 
 // state:
-alias halt "cecho HALT"
+alias halt "echo HALT ; alias run echo"
 
 alias state_a "alias read_a state_a_read_a ; alias read_b state_a_read_b ; alias read_e state_a_read_e"
 alias state_b "alias read_a state_b_read ; alias read_b state_b_read ; alias read_e state_b_read"
@@ -81,7 +83,12 @@ alias state_c_read "alias state state_d ; alias write write_b ; alias shift shif
 
 
 // main 
-alias run "read ; write ; state ; shift"
+
+alias autorun "echo"
+alias init_run "alias run _run"
+alias init_autorun "alias autorun run"
+alias _run "read ; write ; state ; shift ; autorun"
 
 // initialize tape and run one step
-alias init "tape_0 ; write_b ; tape_1 ; erase ; tape_2 ; erase ; tape_3 ; erase ; initial_tape ; initial_state "
+alias init_a "tape_0 ; write_a ; tape_1 ; erase ; tape_2 ; erase ; tape_3 ; erase ; initial_tape ; initial_state ; init_run"
+alias init_b "tape_0 ; write_b ; tape_1 ; erase ; tape_2 ; erase ; tape_3 ; erase ; initial_tape ; initial_state ; init_run"
