palindrome fixes and better autorun

--- a/palindrome.cfg
+++ b/palindrome.cfg
@@ -56,7 +56,7 @@ alias _tape_4_write_0 "alias read read_0 ; tape_4_shifts ; tape_4_writes"
 alias _tape_4_write_1 "alias read read_1 ; tape_4_shifts ; tape_4_writes"
 alias _tape_4_write_e "alias read read_e ; tape_4_shifts ; tape_4_writes"
 
-alias initial_tape tape_1
+alias initial_tape tape_0
 
 // read:
 alias read_0 cecho
@@ -80,14 +80,14 @@ alias qHave0   "alias read_0 qHave0_read_0   ; alias read_1 qHave0_read_1   ; al
 alias qMatch0  "alias read_0 qMatch0_read_0  ; alias read_1 qMatch0_read_1  ; alias read_e qMatch0_read_e"
 alias qHave1   "alias read_0 qHave1_read_0   ; alias read_1 qHave1_read_1   ; alias read_e qHave1_read_e"
 alias qMatch1  "alias read_0 qMatch1_read_0  ; alias read_1 qMatch1_read_1  ; alias read_e qMatch1_read_e"
-alias qAccept "echo ACCEPT ; alias run qAccept"
-alias qReject "echo REJECT ; alias run qReject"
+alias qAccept "echo ACCEPT ; alias run wait"
+alias qReject "echo REJECT ; alias run wait"
 
 alias initial_state qAtLeft
 
 // transitions
 
-alias qAtLeft_read_0 "alias state qHave1  ; alias write write_e ; alias shift shift_r"
+alias qAtLeft_read_0 "alias state qHave0  ; alias write write_e ; alias shift shift_r"
 alias qAtLeft_read_1 "alias state qHave1  ; alias write write_e ; alias shift shift_r"
 alias qAtLeft_read_e "alias state qAccept ; alias write write_e ; alias shift shift_r"
 
@@ -108,21 +108,20 @@ alias qHave1_read_1 "alias state qHave1  ; alias write write_1 ; alias shift shi
 alias qHave1_read_e "alias state qMatch1 ; alias write write_e ; alias shift shift_l"
 
 alias qMatch1_read_0 "alias state qReject  ; alias write write_0 ; alias shift shift_r"
-alias qMatch1_read_1 "alias state qGoBack ; alias write write_0 ; alias shift shift_l"
+alias qMatch1_read_1 "alias state qGoBack  ; alias write write_e ; alias shift shift_l"
 alias qMatch1_read_e "alias state qAccept  ; alias write write_e ; alias shift shift_r"
 
 // main 
 
-alias autorun "echo"
-alias init_run "alias run _run"
-alias init_autorun "alias autorun run"
-alias _run "read ; write ; state ; shift ; autorun"
-alias run _run
+alias autorun "alias _run run ; run"
+alias _run "wait"
+alias run "read ; write ; state ; shift ; _run"
 
-tape_0 ; write_e
-tape_1 ; write_1
+tape_0 ; write_1
+tape_1 ; write_0
 tape_2 ; write_0
-tape_3 ; write_0
+tape_3 ; write_1
 tape_4 ; write_e
 
 initial_tape ; initial_state
+// autorun // uncomment for run on startup
