explanation in readme and demo gif

--- a/palindrome.cfg
+++ b/palindrome.cfg
@@ -117,11 +117,5 @@ alias autorun "alias _run run ; run"
 alias _run "wait"
 alias run "read ; write ; state ; shift ; _run"
 
-tape_0 ; write_1
-tape_1 ; write_0
-tape_2 ; write_0
-tape_3 ; write_1
-tape_4 ; write_e
-
-initial_tape ; initial_state
+alias setup "echo palindome_by_Fl_GUI ; tape_0 ; write_1 ; tape_1 ; write_0 ; tape_2 ; write_0 ; tape_3 ; write_1 ; tape_4 ; write_e ; initial_tape ; initial_state "
 // autorun // uncomment for run on startup
